2005-01-17  Jose E. Marchesi  <jemarch@dataware.es>

	* src/ps.c: idem.

	* src/main.c: idem.

	* src/resource.c (resource_buildDatabase): Patch from FreeBSD
	ports in order to avoid gcc-dependant code: variable declaration
	only on beginning of blocks.

2004-12-31  Jose E. Marchesi  <jemarch@dataware.es>

	* src/Makefile.am (AM_CFLAGS): Use @X_CFLAGS@ from autoconf

2004-12-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* src/file.c (file_fileIsNotUseful): Use EFTYPE instead of ENODATA
	if the former has been defined.

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* NEWS (Notation): Upgraded for 3.6.1

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* README: Upgraded for 3.6.1

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Change reference source file on AC_INIT

2004-12-19  Jose E. Marchesi  <jemarch@gnu.org>

	* src/gv_message.h (displayed\n\): Fixed a typo on the help message.

	* src/gv_misc_res.dat: Changed the Reopen label to Reload for the
	File menu.

	* src/Makefile.am ($(srcdir)/gv_intern_res_unix.dat): Fix
	GV.gsCmdConvPDF in order to work.

2004-12-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/main.c (main): Process GNU arguments after X initialization

2004-11-11  Jose E. Marchesi  <jemarch@dataware.es>

	* configure.ac: Changed the scratch dir from ~/ to /tmp/

2004-11-10  Jose E. Marchesi  <jemarch@dataware.es>

	* New ChangeLog
