@@ -4,3 +4,8 @@ GNU Maintainer:  José E. Marchesi (jemarch@gnu.org)
 
 Original Author: Johannes Plass
 
+Contributors:
+
+
+  - John Bowman (University of Alberta)
+
